schema/testdata/validation_attribute_orderby/schema.keel

model Author {
    fields {
        firstName Text @orderBy
        surname Text
    }

    operations {
        create createAuthor() with (firstName, surname) {
            @orderBy(firstName: asc)
        }

        list listAuthors() {
            @orderBy(firstName: asc)
            @orderBy(surname: asc)
        }
    }

    @orderBy(firstName: asc)

    functions {
        list listAuthorsFn() {
            @orderBy(firstName: asc, surname: asc)
        }
    }
}